--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -12,3 +12,4 @@ en:
   delete: "Delete this file"
   delete_confirm: "Are you sure you want to delete this file?"
   picker_browse: "Select or upload"
+  picker_remove: "Remove"
